# llmo-for-catalog

./: README.md  llmo_pdp_optimization.md  pyproject.toml  report.md  suggestions_and_explanations.json  test_result_20260106T062611Z.txt  test_result_20260109T133028Z.txt
src/llmo_for_catalog/: crew.py  main.py
src/llmo_for_catalog/config/: agents.yaml  tasks.yaml
src/llmo_for_catalog/tools/: commerce_pdp_scraper_tool.py  commerce_product_data_tool.py  scrape_pdp.py  scrape_pdp_agent.py
