[project]
name = "llmo_for_catalog"
version = "0.1.0"
description = "llmo-for-catalog using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
llmo_for_catalog = "llmo_for_catalog.main:run"
run_crew = "llmo_for_catalog.main:run"
train = "llmo_for_catalog.main:train"
replay = "llmo_for_catalog.main:replay"
test = "llmo_for_catalog.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
